--- a/functions/index.html
+++ b/functions/index.html
@@ -6,6 +6,10 @@
 
 <p><a href="/functions/object.html#serialize">serialize</a></p>
 
+<p><a href="/functions/object.html#keys">keys</a></p>
+
+<p><a href="/functions/object.html#values">values</a></p>
+
 <h2 id="maths">maths</h2>
 
 <p><a href="/functions/maths.html#addition">Addition</a></p>
@@ -96,11 +100,7 @@
 
 <h2 id="array">array</h2>
 
-<p><a href="/functions/array.html#array-literals">array literals</a></p>
-
-<p><a href="/functions/array.html#map-/-extract">map / extract</a></p>
-
-<p><a href="/functions/array.html#filter">filter</a></p>
+<p><a href="/functions/array.html#wraparray">wrapArray</a></p>
 
 <p><a href="/functions/array.html#empty">empty</a></p>
 
