--- a/getting-started.html
+++ b/getting-started.html
@@ -6,9 +6,13 @@
 
 <p>When this documentation contains code examples, it’ll have some JSON input, the code block, then some output, like so:</p>
 
-<pre><code class="language-idml:input">{"a": 2, "b": 2}
+<pre><code class="language-json">{"a": 2, "b": 2}
 </code></pre>
-<pre><code class="language-idml:code">result = a + b
+<pre><code class="language-idml">result = a + b
+</code></pre>
+<pre><code class="language-json">{
+  "result" : 4
+}
 </code></pre>
 
 <h2 id="repl">REPL</h2>
